--- a/GameDevBestPractices/GameDevBestPractices/GameDevBestPractices.csproj
+++ b/GameDevBestPractices/GameDevBestPractices/GameDevBestPractices.csproj
@@ -39,8 +39,14 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Game1.cs" />
+    <Compile Include="GameScreen.cs" />
+    <Compile Include="Manager.cs" />
+    <Compile Include="MenuScreen.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Screen.cs" />
+    <Compile Include="ScreenManager.cs" />
+    <Compile Include="XmlManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
